// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prueba en Componente GifExpertApp debe mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Dragon Ball"
      key="Dragon Ball"
    />
    <GifGrid
      category="Ponys"
      key="Ponys"
    />
    <GifGrid
      category="animales"
      key="animales"
    />
    <GifGrid
      category="plantas"
      key="plantas"
    />
    <GifGrid
      category="123ssss"
      key="123ssss"
    />
  </ol>
</Fragment>
`;

exports[`Prueba en Componente GifExpertApp mostrarme categoria correctamente 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
